@@ -20,6 +20,7 @@ Latex library:
 - makebox, framebox
 - unusual_command, for weird LaTeX commands with interleaved [] and {} arguments
 or for commands with multiple optional arguments
+- place_label to hackishly place a label
 
 Version 1.1.0
 =============
